# calc

./: .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.py  requirements.txt
docs/: grammar.md  grammer.md
src/: Calculator.cpp  Calculator.h  Constants.h  Token.h  TokenStream.cpp  TokenStream.h  Variables.cpp  Variables.h  main.cpp
